[package]
name = "cwextab"
version = "0.1.0"
edition = "2021"
authors = ["Amber Brault <celestialamber1@gmail.com>"]
repository = "https://github.com/Celestialamber/cwextab"
readme = "../README.md"
description = "CodeWarrior Exception Table decoder"
rust-version = "1.58"

[dependencies]
anyhow = "1.0.86"
